<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    tools:context=".MainActivity"
    android:weightSum="10"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edtCName"
            android:hint="@string/name"
            android:layout_marginBottom="@dimen/app_small_margin"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/edtCEmail"
            android:hint="@string/email"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/edtCAddress"
            android:hint="@string/address"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/edtCPhoneNumber"
            android:hint="@string/phone_number"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/edtCPassword"
            android:hint="@string/password"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/edtCRenterPass"
            android:hint="@string/retype_password"
            style="@style/EditTextStyle"/>

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
          >

            <Button
                android:id="@+id/btnCSubmit"
              style="@style/ButtonStyle"
                android:onClick="cSubmit"
                android:text="@string/submit"
                />


        </LinearLayout>
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/tvSpReg"
            android:gravity="center"
            android:textColor="#0000ff"
            android:textSize="15dp"
            android:text="@string/Loginsp"
            android:onClick="spRegister"
            tools:ignore="OnClick" />


    </LinearLayout>
</LinearLayout>