<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ForgotPasswordActivity"
    android:weightSum="10"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <include layout="@layout/layout_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
       android:layout_marginTop="60dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtForgotPass"
            style="@style/EditTextStyle"
            android:hint="@string/mobileemail"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:layout_marginTop="@dimen/app_normal_margin"
            android:textAlignment="center"/>

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="@dimen/app_normal_margin">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btnContinue"
                style="@style/ButtonStyle"
                android:text="@string/continu"
                android:onClick="home"
                android:layout_marginRight="@dimen/app_small_margin"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btnCancle"
                style="@style/ButtonStyle"
                android:text="@string/cancle"
                android:onClick="cancle"
                android:layout_marginLeft="@dimen/app_small_margin"
                tools:ignore="OnClick" />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>