<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context=".CreateQueryActivity">

        <EditText
            android:id="@+id/edtSearch"
            style="@style/EditTextStyle"
            android:hint="@string/search" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextViewStyle"
            android:layout_marginTop="@dimen/app_normal_margin"
            android:text="@string/description"
            android:textAlignment="center"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cameraclick"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <ImageView
                android:id="@+id/photo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cameraclick"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

        </LinearLayout>

        <EditText
            style="@style/EditTextStyle"
            android:gravity="left|top"
            android:hint="@string/writedesrciption"
            android:lines="4" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/selectspRV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </android.support.v7.widget.RecyclerView>




</LinearLayout>

<Button
android:id="@+id/btnSubmit"
style="@style/ButtonStyle"
android:layout_alignParentBottom="true"
android:layout_margin="@dimen/app_normal_margin"
android:text="@string/submit" />
</LinearLayout>