<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/layoutToolbar"
        android:layout_alignParentTop="true"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutToolbar"
        android:layout_above="@+id/btnSubmit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10"
            tools:context=".CreateQueryActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/app_normal_margin"
                android:layout_weight="8"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtSearch"
                    style="@style/EditTextStyle"
                    android:hint="@string/search"
                    />

                <TextView
                    android:id="@+id/tvDescription"
                    style="@style/TextViewStyle"
                    android:layout_marginTop="@dimen/app_normal_margin"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_normal_margin"
                    android:layout_marginTop="@dimen/app_normal_margin"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/ivQPhoto1"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="@dimen/app_normal_margin"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_qphoto1" />

                    <ImageView
                        android:id="@+id/ivQPhoto2"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="@dimen/app_normal_margin"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_qphoto1" />

                </LinearLayout>

                <EditText
                    style="@style/EditTextStyle"
                    android:gravity="left|top"
                    android:hint="@string/writedesrciption"
                    android:lines="4" />
                <android.support.v7.widget.RecycleView>


                </android.support.v7.widget.RecycleView>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/app_normal_margin"
        android:text="@string/submit" />
</RelativeLayout>